--- a/src/makefile
+++ b/src/makefile
@@ -46,7 +46,7 @@ VN_UP_MODULES += $(VN_UP)/gap_finding_pass $(VN_UP)/boundary_pass $(VN_UP)/alt_o
 VN_GRAPH_MODULES = $(VN_GRAPH)/graph $(VN_GRAPH)/doc_graphs
 VN_LANG_MODULES = $(VN_LANG)/sort_decls $(VN_LANG)/render $(VN_LANG)/uniquify_identifiers $(VN_LANG)/indenter $(VN_LANG)/vn_script
 CPLUSPLUS_MODULES = $(CPLUSPLUS)/identifier_tracker $(CPLUSPLUS)/rc_hold $(CPLUSPLUS)/cpprender 
-STEPS_MODULES = $(STEPS)/split_instance_declarations $(STEPS)/generate_implicit_casts $(STEPS)/generate_stacks $(STEPS)/lower_control_flow 
+STEPS_MODULES = $(STEPS)/split_instance_declarations $(STEPS)/generate_stacks $(STEPS)/lower_control_flow 
 STEPS_MODULES += $(STEPS)/clean_up $(STEPS)/state_out $(STEPS)/to_sc_method $(STEPS)/uncombable $(STEPS)/fall_out $(STEPS)/test_steps
 STEPS_MODULES += $(STEPS)/systemc_raising $(STEPS)/systemc_from_c_simple $(STEPS)/systemc_lowering
 MAIN_MODULES = $(MAIN)/inferno $(MAIN)/unit_test 
