add + to -q to get the lowerings back

--- a/test/makefile
+++ b/test/makefile
@@ -39,7 +39,7 @@ REFERENCE_PATH=test/reference
 
 # Prepend default inferno args so they can be overridden. Thus, no need 
 # for these to be appended to the results directory (see above)
-DEFAULT_I_ARG="-tq"
+DEFAULT_I_ARG=-tq
 IARG="${DEFAULT_I_ARG} ${I}"
 
 # Looking for the "Keep going" thing? Do it by passing -k directly to make.
